--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ html {
   font-size: 1.6rem;
   color: #ffffff;
   background-color: #e95a08;
-  padding: 26px 50px;
+  padding: 18px 50px;
   font-weight: 600;
   border: none;
 }
@@ -256,6 +256,43 @@ html {
 .latest-deal-zabo h3 {
   font-size: 4rem;
 }
+
+/* join section */
+
+.join {
+  background-image: url(../assets/news-letter-bg.png);
+  min-height: 533px;
+  /* width: 100%; */
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  margin-top: 120px;
+}
+.join-title {
+  color: #ffffff;
+  background: transparent;
+  margin-bottom: 23px;
+}
+
+.join-email {
+  height: 50px;
+  width: calc(100% - 178.31px - 20px);
+  padding-left: 20px;
+  border: none;
+  font-family: "Inter", sans-serif;
+  font-size: 1.6rem;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.input-box {
+  width: calc(100% - 610px);
+  min-width: 321px;
+  max-width: 1140px;
+}
 @media screen and (max-width: 576px) {
   /* mobile nav section */
   .mobile-display-no {
@@ -351,5 +388,19 @@ html {
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
       url(../assets/deal-zabo.png);
     background-size: cover;
+  }
+
+  /* mobile join section */
+  .join-title {
+    font-size: 2rem;
+  }
+  .btn-sub {
+    padding: 19px 12px;
+  }
+  .join-email {
+    width: calc(218.69px - 20px);
+  }
+  .join {
+    min-height: 276px;
   }
 }
