--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,7 @@ html {
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 2.2rem;
+  color: #8987a1;
 }
 
 .inter-regular-16 {
@@ -88,7 +89,7 @@ html {
   margin-top: 120px;
   display: flex;
   flex-direction: column;
-  gap: 120px;
+  gap: 80px;
 }
 
 /* Banner section */
@@ -162,7 +163,7 @@ html {
   gap: 60px;
   align-items: center;
   margin-top: 83px;
-  margin-bottom: 130px;
+  margin-bottom: 60px;
 }
 .plants-lover-imgs {
   position: relative;
@@ -185,6 +186,16 @@ html {
   color: rgba(0, 0, 0, 0.5);
 }
 /* latest deal section */
+
+.latest-deal {
+  max-width: 1140px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  margin-top: 0px;
+}
+
 .latest-deal-text {
   text-align: center;
   margin-bottom: 120px;
@@ -345,6 +356,14 @@ html {
   .main {
     margin-top: 28px;
   }
+  .noto-serif-bold-50 {
+  font-size: 2.4rem;
+}
+
+.inter-regular-22 {
+  font-size: 1.4rem;
+}
+
 
   /* mobile banner section */
   .banner {
@@ -382,6 +401,7 @@ html {
     flex-direction: column;
     max-width: 90%;
     margin: 18px auto;
+    margin-bottom: 40px;
   }
   .plants-lover-img {
     width: 100%;
@@ -442,10 +462,33 @@ html {
   }
   /* mobile footer section */
 
-  .footer {
+   .footer {
     flex-direction: column;
     gap: 20px;
+    width: 100%;
+    max-width: 100%;
+    padding: 0 16px;
+    box-sizing: border-box;
+    align-items: flex-start;
   }
+
+  .footer-left {
+    max-width: 100%;
+  }
+
+  .footer-list,
+  .footer-left,
+  .footer-social-icons {
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  .footer-social-icons {
+    justify-content: flex-start;
+  }
+
   .footer-list-1 {
     margin-bottom: 12px;
   }
